; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_max8997.c_max8997_update_reg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_max8997.c_max8997_update_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.max8997_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @max8997_update_reg(%struct.i2c_client* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.i2c_client*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.max8997_dev*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %14 = call %struct.max8997_dev* @i2c_get_clientdata(%struct.i2c_client* %13)
  store %struct.max8997_dev* %14, %struct.max8997_dev** %9, align 8
  %15 = load %struct.max8997_dev*, %struct.max8997_dev** %9, align 8
  %16 = getelementptr inbounds %struct.max8997_dev, %struct.max8997_dev* %15, i32 0, i32 0
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %18, i32 %19)
  store i32 %20, i32* %10, align 4
  %21 = load i32, i32* %10, align 4
  %22 = icmp sge i32 %21, 0
  br i1 %22, label %23, label %38

23:                                               ; preds = %4
  %24 = load i32, i32* %10, align 4
  %25 = and i32 %24, 255
  store i32 %25, i32* %11, align 4
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = and i32 %26, %27
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %8, align 4
  %31 = xor i32 %30, -1
  %32 = and i32 %29, %31
  %33 = or i32 %28, %32
  store i32 %33, i32* %12, align 4
  %34 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %12, align 4
  %37 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %34, i32 %35, i32 %36)
  store i32 %37, i32* %10, align 4
  br label %38

38:                                               ; preds = %23, %4
  %39 = load %struct.max8997_dev*, %struct.max8997_dev** %9, align 8
  %40 = getelementptr inbounds %struct.max8997_dev, %struct.max8997_dev* %39, i32 0, i32 0
  %41 = call i32 @mutex_unlock(i32* %40)
  %42 = load i32, i32* %10, align 4
  ret i32 %42
}

declare dso_local %struct.max8997_dev* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @i2c_smbus_read_byte_data(%struct.i2c_client*, i32) #1

declare dso_local i32 @i2c_smbus_write_byte_data(%struct.i2c_client*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
